--- a/index.html
+++ b/index.html
@@ -43,5 +43,5 @@
     <base href="/saturday-skankout/"><link rel="stylesheet" href="styles.1d0932dce9afc839d888.css"></head>
 <body class="sidebar-collapse">
     <app-root></app-root>
-<script src="runtime.689ba4fd6cadb82c1ac2.js" defer></script><script src="polyfills-es5.a47a18831326f938fbd3.js" nomodule defer></script><script src="polyfills.4f4f9261f736ecea13df.js" defer></script><script src="scripts.4dab59110a82da8d1da9.js" defer></script><script src="main.ca586eb99d503fd04367.js" defer></script></body>
+<script src="/runtime.689ba4fd6cadb82c1ac2.js" defer></script><script src="/polyfills-es5.a47a18831326f938fbd3.js" nomodule defer></script><script src="/polyfills.4f4f9261f736ecea13df.js" defer></script><script src="/scripts.4dab59110a82da8d1da9.js" defer></script><script src="/main.ca586eb99d503fd04367.js" defer></script></body>
 </html>
